message FTransfer {
	required int64 package_id = 1;
	required int32 x = 2;
	required int32 y = 3;
}

message FCommands {
        optional string username = 1;
	optional int64 user_id = 2;
	optional int64 package_id = 3;
	optional FTransfer transfer = 4;
}

message FResponse {
	optional int64 user_id = 1;
	repeated BPackage pack_info = 2;
	optional string error = 3;
}

message BPackage {
	repeated Item detail = 1;
	required int64 package_id = 2;
	repeated PackStatus status = 3; 
}

message Item {
	required string description = 1;
	required int32 amount = 2;
}

message PackStatus {
	required string progress = 1;
}